Updated Git Ignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,18 @@
 .tmp
 dist
 node_modules
+.DS_Store
+.bowerrc
+.editorconfig
+.gitattributes
+.jshintrc
+.travis.yml
+GithubPagesDeployment.txt
+Gruntfile.js
+README.md
+app/
+bower.json
+karma-e2e.conf.js
+karma.conf.js
+package.json
+test/
